proved formblock doesn't work with checkbox

--- a/src/ContosoUniversity/packages.config
+++ b/src/ContosoUniversity/packages.config
@@ -20,6 +20,7 @@
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
   <package id="MediatR" version="2.1.0" targetFramework="net451" />
+  <package id="Mehdime.Entity" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.Futures" version="5.1.0-rc1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
