--- a/src/ContosoUniversity/Web.config
+++ b/src/ContosoUniversity/Web.config
@@ -11,7 +11,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SchoolContext" connectionString="Data Source=(LocalDb)\v12.0;Initial Catalog=ContosoUniversity;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="SchoolContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Contoso;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
